<resources>
    <string name="app_name">BMI-app</string>
    <string name="bmi_title">Body Mass Index Calculator</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="height_hint">Height (cm)</string>
    <string name="bmi_result_hint">Your BMI is</string>
    <string name="bmi_category_hint">Result</string>
    <string name="calculate">Calculate</string>
    <string name="empty_input">Please enter weight and height.</string>
    <string name="height_zero">Height must not be 0.</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Obesity</string>
    <string name="col_date">Date</string>
    <string name="col_weight">Weight</string>
    <string name="col_height">Height</string>
    <string name="col_bmi">BMI</string>
    <string name="col_result">Result</string>
    <string name="save_success">Data saved successfully</string>
    <string name="save_failed">Failed to save data</string>
    <string name="bmi_history_title">Body Mass Index History</string>
</resources>