<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/col_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/col_date" />

    <TextView
        android:id="@+id/col_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/col_weight" />

    <TextView
        android:id="@+id/col_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/col_height" />

    <TextView
        android:id="@+id/col_bmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/col_bmi" />

    <TextView
        android:id="@+id/col_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/col_result" />
</LinearLayout>